--- a/.github/workflows/close-stale-discussions.yml
+++ b/.github/workflows/close-stale-discussions.yml
@@ -4,6 +4,10 @@ on:
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch:     # Enables manual run from the Actions tab
+  
+permissions:
+  contents: read
+  discussions: write
 
 jobs:
   close-discussions:
