--- a/.github/workflows/close-stale-discussions.yml
+++ b/.github/workflows/close-stale-discussions.yml
@@ -28,7 +28,6 @@ jobs:
       - name: Run inline Discussion Cleanup Script
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PERSONAL_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           CLOSING_MESSAGE: |
             Hi,
 
@@ -51,19 +50,12 @@ jobs:
           const [OWNER, REPO] = repoInfo.split('/');
 
           // ONE_WEEK_MS is set to one week (in milliseconds)
-          const ONE_WEEK_MS = 10; // Actual one week in ms
+          const ONE_WEEK_MS = 7 * 24 * 60 * 60 * 1000; // Actual one week in ms
 
           async function run() {
             const token = process.env.GITHUB_TOKEN;
-            const personalToken = process.env.PERSONAL_TOKEN;
-
             if (!token) {
               console.error("GITHUB_TOKEN not set");
-              process.exit(1);
-            }
-
-            if (!personalToken) {
-              console.error("PERSONAL_ACCESS_TOKEN not set");
               process.exit(1);
             }
 
@@ -77,7 +69,7 @@ jobs:
             // Set up GraphQL client
             const graphqlWithAuth = graphql.defaults({
               headers: {
-                authorization: `token ${personalToken}`,
+                authorization: `token ${token}`,
               },
             });
 
